# open-world-alignment

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  LICENSE-docs  MAINTAINERS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  pyproject.toml
awesome/: README.md  absent_stakeholders.md  agent_evaluations.md  benchmark_validity.md  claim_type_and_measurement_validity.md  governance_and_auditing.md  hard_constraints.md  human_signal_limits.md  monitoring_and_rollback.md  scalable_oversight.md  sustainability_and_externalities.md  uncertainty_and_abstention.md  verifier_stack_design.md
cards/: README.md  open_world_evaluation_card.md  open_world_evaluation_card.schema.json  open_world_evaluation_card.yaml
checklists/: reviewer_checklist.md
docs/: claim_antipatterns.md  glossary.md  related_work.md  validation_levels.md
failure-modes/: README.md  benchmark_overclaiming.md  constraint_erasure.md  correlated_verifier_failure.md  evaluation_debt.md  externality_laundering.md  monitoring_without_power.md  stakeholder_capture.md  synthetic_judge_monism.md  verifier_gaming.md
guides/: for_agent_developers.md  for_benchmark_builders.md  for_governance_teams.md  for_researchers.md  for_reviewers.md
integrations/: README.md
reviewer-package/: README.md  desk_reject_red_flags.md  overclaiming_red_flags.md  reviewer_checklist_15min.md  reviewer_checklist_5min.md  reviewer_checklist_full.md
rubrics/: card_maturity_rubric.md  card_maturity_rubric.yaml  reviewer_rubric.md
scripts/: check_awesome_entries.py  score_card.py  (+4 more)
(+129 files in other folders)
